Add temporary redirects

--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -37,7 +37,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url("bg_img.jpg");
+            background-image: url("../bg_img.jpg");
             background-size: contain;
             background-position: center;
             filter: blur(10px);
@@ -160,17 +160,137 @@
 
     <div class="navigation-container">
         <div class="navigation-grid">
-            <div class="navigation-card" onclick="window.location.href='boss-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='asylum-demon.html'">
                 <div class="navigation-header">
-                    <h3>Bosses</h3>
+                    <h3>Asylum Demon</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
                         <!-- <div class="nav-icon">⚔️</div> -->
                         <!-- <div class="nav-icon">
-                            <img src="images/asylum-demon.png" alt="Boss Icon" class="icon-img">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating all bosses</p>
+                        <p>Strategies for defeating Asylum Demon</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navigation-card" onclick="window.location.href='boss.html'">
+                <div class="navigation-header">
+                    <h3>boss</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating boss</p>
                     </div>
                 </div>
 
