Update with template

--- a/ds1/boss-guides/asylum-demon.html
+++ b/ds1/boss-guides/asylum-demon.html
@@ -35,7 +35,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url("../../bg_img.jpg");
+            background-image: url("../bg_img.jpg");
             background-size: contain;
             background-position: center;
             filter: blur(10px);
@@ -128,30 +128,6 @@
             padding-bottom: 5px;
         }
 
-        .weapon-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 15px;
-        }
-
-        .weapon-card {
-            background-color: var(--surface);
-            border-radius: 5px;
-            padding: 15px;
-            border: 1px solid #333;
-        }
-
-        .weapon-card h4 {
-            margin-top: 0;
-            color: var(--accent);
-        }
-
-        .weapon-card .location {
-            color: var(--secondary-text);
-            font-style: italic;
-            margin-bottom: 10px;
-        }
-
         .back-button {
             display: inline-block;
             background-color: var(--accent);
@@ -190,7 +166,7 @@
 
     <div class="breadcrumbs">
         <a href="../../index.html">Home</a> >
-        <a href="../index.html">Dark Souls: Remastered</a> >
+        <a href="../index.html">Dark Souls: Remastered</a> > <a href="landing-page.html">Boss Guides</a> >
         [guide name] guide
     </div>
 
@@ -261,7 +237,7 @@
             </ol>
         </div>
 
-        <a href="../../index.html" class="back-button">Back to All Guides</a>
+        <a href="landing-page.html" class="back-button">Back to All Boss Guides</a>
     </div>
 
     <footer>
