Add more boss names

--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -177,7 +177,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='boss.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Taurus Demon</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -185,14 +185,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Taurus Demon</p>
                     </div>
                 </div>
 
             </div>
             <div class="navigation-card" onclick="window.location.href='boss.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Gargoyles</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -200,14 +200,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Gargoyles</p>
                     </div>
                 </div>
 
             </div>
             <div class="navigation-card" onclick="window.location.href='boss.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Capra Demon</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -215,14 +215,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Capra Demon</p>
                     </div>
                 </div>
 
             </div>
             <div class="navigation-card" onclick="window.location.href='boss.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Gaping Dragon</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -230,14 +230,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Gaping Dragon</p>
                     </div>
                 </div>
 
             </div>
             <div class="navigation-card" onclick="window.location.href='boss.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Quelaag</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -245,7 +245,7 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Quelaag</p>
                     </div>
                 </div>
 
