--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -160,7 +160,7 @@
 
     <div class="navigation-container">
         <div class="navigation-grid">
-            <div class="navigation-card" onclick="window.location.href='asylum-demon.html'">
+            <div class="navigation-card" onclick="window.location.href='01_asylum-demon.html'">
                 <div class="navigation-header">
                     <h3>Asylum Demon</h3>
                 </div>
@@ -175,7 +175,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='01_taurus-demon.html'">
                 <div class="navigation-header">
                     <h3>Taurus Demon</h3>
                 </div>
@@ -190,7 +190,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='01_gargoyles.html'">
                 <div class="navigation-header">
                     <h3>Gargoyles</h3>
                 </div>
