--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -175,7 +175,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='01_taurus-demon.html'">
+            <div class="navigation-card" onclick="window.location.href='02_taurus-demon.html'">
                 <div class="navigation-header">
                     <h3>Taurus Demon</h3>
                 </div>
@@ -190,7 +190,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='01_gargoyles.html'">
+            <div class="navigation-card" onclick="window.location.href='03_gargoyles.html'">
                 <div class="navigation-header">
                     <h3>Gargoyles</h3>
                 </div>
@@ -205,7 +205,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='04.html'">
                 <div class="navigation-header">
                     <h3>Capra Demon</h3>
                 </div>
@@ -220,7 +220,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='05.html'">
                 <div class="navigation-header">
                     <h3>Gaping Dragon</h3>
                 </div>
@@ -235,7 +235,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='06.html'">
                 <div class="navigation-header">
                     <h3>Quelaag</h3>
                 </div>
@@ -250,7 +250,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='07.html'">
                 <div class="navigation-header">
                     <h3>boss</h3>
                 </div>
@@ -265,7 +265,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='08.html'">
                 <div class="navigation-header">
                     <h3>boss</h3>
                 </div>
@@ -280,7 +280,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='boss.html'">
+            <div class="navigation-card" onclick="window.location.href='09.html'">
                 <div class="navigation-header">
                     <h3>boss</h3>
                 </div>
