Update formatting and hyperlinks

--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -252,7 +252,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='07.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Iron Golem</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -260,14 +260,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Iron Golem</p>
                     </div>
                 </div>
 
             </div>
             <div class="navigation-card" onclick="window.location.href='08.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Ornstein & Smough</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -275,14 +275,14 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Ornstein & Smough</p>
                     </div>
                 </div>
 
             </div>
             <div class="navigation-card" onclick="window.location.href='09.html'">
                 <div class="navigation-header">
-                    <h3>boss</h3>
+                    <h3>Lordvessel Bosses</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -290,7 +290,7 @@
                         <!-- <div class="nav-icon">
                             <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
                         </div> -->
-                        <p>Strategies for defeating boss</p>
+                        <p>Strategies for defeating Lordvessel Bosses</p>
                     </div>
                 </div>
 
