--- a/ds1/boss-guides/02_taurus-demon.html
+++ b/ds1/boss-guides/02_taurus-demon.html
@@ -166,7 +166,7 @@
 
     <div class="breadcrumbs">
         <a href="../../index.html">Home</a> >
-        <a href="../index.html">Dark Souls: Remastered</a> > <a href="landing-page.html">Boss Guides</a> >
+        <a href="../landing-page.html">Dark Souls: Remastered</a> > <a href="landing-page.html">Boss Guides</a> >
         [guide name] guide
     </div>
 
