Add back button

--- a/ds1/landing-page.html
+++ b/ds1/landing-page.html
@@ -131,6 +131,21 @@
             color: var(--accent);
         }
 
+        .back-button {
+            display: inline-block;
+            background-color: var(--accent);
+            color: #000;
+            padding: 10px 15px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+
+        .back-button:hover {
+            opacity: 0.9;
+        }
+
         footer {
             margin-top: 3rem;
             text-align: center;
@@ -196,6 +211,7 @@
             </div>
         </div>
     </div>
+    <a href="../landing-page.html" class="back-button">Back to All Guides</a>
 
     <footer>
         <p><em>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of
