--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -59,6 +59,20 @@
             letter-spacing: 1px;
         }
 
+        .breadcrumbs {
+            margin-bottom: 1rem;
+            color: var(--secondary-text);
+        }
+
+        .breadcrumbs a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        .breadcrumbs a:hover {
+            text-decoration: underline;
+        }
+
         .game-info {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
@@ -166,6 +180,12 @@
     <header>
         <h1>Dark Souls: Remastered Guide</h1>
     </header>
+
+    <div class="breadcrumbs">
+        <a href="../../index.html">Home</a> >
+        <a href="../landing-page.html">Dark Souls: Remastered</a> >
+        Boss Guides
+    </div>
 
     <div class="game-info">
         <h2>Welcome, Chosen Undead</h2>
