--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -190,7 +190,8 @@
 
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls: Remastered</a> >
+        <a href="../../landing-page.html">Dark Souls: Remastered</a> >
+        <a href="../index.html">All Achievement Guides</a> >
         Reach Lordran
     </div>
 
@@ -230,13 +231,13 @@
                 </li>
                 <li>
                     Return to the Northern Undead Asylum <em>is</em> possible. I don't want to reveal spoilers, but
-                    there will be a link eventually found <a href="../../guides/northern-undead-asylum.html">here
+                    there will be a link eventually found <a href="../../area-guides/northern-undead-asylum.html">here
                         </ahref></a>
                 </li>
             </ol>
         </div>
 
-        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../../landing-page.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
