--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -190,7 +190,8 @@
 
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls: Remastered</a> >
+        <a href="../../landing-page.html">Dark Souls: Remastered</a> >
+        <a href="../index.html">All Achievement Guides</a> >
         Covenant: Way of White
     </div>
 
