--- a/ds1/achievements/second-bell/index.html
+++ b/ds1/achievements/second-bell/index.html
@@ -190,8 +190,9 @@
 
     <div class="breadcrumbs">
         <a href="../../../index.html">Home</a> >
-        <a href="../../index.html">Dark Souls: Remastered</a> >
-        [achievement]
+        <a href="../../landing-page.html">Dark Souls: Remastered</a> >
+        <a href="../index.html">All Achievement Guides</a> >
+        Ring The Bell (Qualaag's Domain)
     </div>
 
     <div class="achievement-container">
