Add achievement names

--- a/ds1/achievements/covenant-chaos-servant/index.html
+++ b/ds1/achievements/covenant-chaos-servant/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[achievement]</title>
+    <title>Covenant: Chaos Servant</title>
     <style>
         :root {
             --background: #121212;
@@ -192,14 +192,14 @@
         <a href="../../../index.html">Home</a> >
         <a href="../../landing-page.html">Dark Souls: Remastered</a> >
         <a href="../index.html">All Achievement Guides</a> >
-        [achievement]
+        Covenant: Chaos Servant
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">[achievement]</h2>
-                <p class="achievement-description">[achievement]</p>
+                <h2 class="achievement-title">Covenant: Chaos Servant</h2>
+                <p class="achievement-description">Covenant: Chaos Servant</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
