--- a/ds1/achievements/rite-of-kindling/index.html
+++ b/ds1/achievements/rite-of-kindling/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[achievement]</title>
+    <title>Rite of Kindling</title>
     <style>
         :root {
             --background: #121212;
@@ -192,14 +192,14 @@
         <a href="../../../index.html">Home</a> >
         <a href="../../landing-page.html">Dark Souls: Remastered</a> >
         <a href="../index.html">All Achievement Guides</a> >
-        [achievement]
+        Rite of Kindling
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">[achievement]</h2>
-                <p class="achievement-description">[achievement]</p>
+                <h2 class="achievement-title">Rite of Kindling</h2>
+                <p class="achievement-description">Rite of Kindling</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
