--- a/ds1/achievements/second-bell/index.html
+++ b/ds1/achievements/second-bell/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[achievement]</title>
+    <title>Ring The Bell (Qualaag's Domain)</title>
     <style>
         :root {
             --background: #121212;
@@ -198,8 +198,8 @@
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">[achievement]</h2>
-                <p class="achievement-description">[achievement]</p>
+                <h2 class="achievement-title">Ring The Bell (Qualaag's Domain)</h2>
+                <p class="achievement-description">Ring The Bell (Qualaag's Domain)</p>
             </div>
             <span class="difficulty-tag">[diff]</span>
         </div>
