Add difficulties and coloring updates

--- a/ds1/achievements/knights-honor/index.html
+++ b/ds1/achievements/knights-honor/index.html
@@ -114,8 +114,8 @@
             padding: 5px 10px;
             border-radius: 5px;
             font-weight: bold;
-            background-color: #e74c3c;
-            color: white;
+            background-color: black;
+            color: lavender;
         }
 
         .guide-section {
