--- a/ds1/achievements/reach-anor-londo/index.html
+++ b/ds1/achievements/reach-anor-londo/index.html
@@ -201,7 +201,7 @@
                 <h2 class="achievement-title">Reach Anor Londo</h2>
                 <p class="achievement-description">Reach Anor Londo</p>
             </div>
-            <span class="difficulty-tag">[diff]</span>
+            <span class="difficulty-tag">Easy</span>
         </div>
 
         <div class="guide-section">
