--- a/ds1/achievements/rite-of-kindling/index.html
+++ b/ds1/achievements/rite-of-kindling/index.html
@@ -114,8 +114,8 @@
             padding: 5px 10px;
             border-radius: 5px;
             font-weight: bold;
-            background-color: #3ce759;
-            color: white;
+            background-color: #dce73c;
+            color: black;
         }
 
         .guide-section {
@@ -201,7 +201,7 @@
                 <h2 class="achievement-title">Rite of Kindling</h2>
                 <p class="achievement-description">Rite of Kindling</p>
             </div>
-            <span class="difficulty-tag">[diff]</span>
+            <span class="difficulty-tag">Medium</span>
         </div>
 
         <div class="guide-section">
