--- a/ds1/achievements/second-bell/index.html
+++ b/ds1/achievements/second-bell/index.html
@@ -114,7 +114,7 @@
             padding: 5px 10px;
             border-radius: 5px;
             font-weight: bold;
-            background-color: #dce73c;
+            background-color: #f39040;
             color: black;
         }
 
