--- a/ds1/achievements/knights-honor/index.html
+++ b/ds1/achievements/knights-honor/index.html
@@ -305,7 +305,7 @@
             </ul>
         </div>
 
-        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
