--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -193,6 +193,94 @@
                     </div>
                 </div>
             </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+                <div class="navigation-header">
+                    <h3>Areas</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <div class="nav-icon">🗺️</div>
+                        <p>Guides for all locations in Lordran</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
