--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -189,7 +189,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -222,7 +222,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -266,7 +266,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
@@ -277,7 +277,7 @@
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guides for all locations in Lordran</p>
+                        <p>Guide for [location]</p>
                     </div>
                 </div>
             </div>
