Add temporary titles

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -184,7 +184,7 @@
         <div class="navigation-grid">
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -195,7 +195,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -206,7 +206,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -217,7 +217,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -228,7 +228,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -239,7 +239,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -250,7 +250,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -261,7 +261,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -272,7 +272,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>Areas</h3>
+                    <h3>[location]</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
