--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -184,12 +184,12 @@
         <div class="navigation-grid">
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>[location]</h3>
+                    <h3>Northern Undead Asylum</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guide for [location]</p>
+                        <p>Guide for Northern Undead Asylum</p>
                     </div>
                 </div>
             </div>
