--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -261,12 +261,12 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
                 <div class="navigation-header">
-                    <h3>[location]</h3>
+                    <h3>Quelaag's Domain</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
                         <div class="nav-icon">🗺️</div>
-                        <p>Guide for [location]</p>
+                        <p>Guide for Quelaag's Domain</p>
                     </div>
                 </div>
             </div>
