--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -182,7 +182,7 @@
 
     <div class="navigation-container">
         <div class="navigation-grid">
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='01_northern-undead-asylum.html'">
                 <div class="navigation-header">
                     <h3>Northern Undead Asylum</h3>
                 </div>
@@ -193,7 +193,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='02_firelink-shrine.html'">
                 <div class="navigation-header">
                     <h3>Firelink Shrine</h3>
                 </div>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='03_undead-burg.html'">
                 <div class="navigation-header">
                     <h3>Undead Burg</h3>
                 </div>
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='04.html'">
                 <div class="navigation-header">
                     <h3>Undead Parish</h3>
                 </div>
@@ -226,7 +226,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='05.html'">
                 <div class="navigation-header">
                     <h3>Lower Undead Burg*</h3>
                 </div>
@@ -237,9 +237,9 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='06.html'">
                 <div class="navigation-header">
-                    <h3>Depths</h3>
+                    <h3>Depths*</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -248,7 +248,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='07.html'">
                 <div class="navigation-header">
                     <h3>Blighttown</h3>
                 </div>
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='08.html'">
                 <div class="navigation-header">
                     <h3>Quelaag's Domain</h3>
                 </div>
@@ -270,7 +270,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='area-guides/index.html'">
+            <div class="navigation-card" onclick="window.location.href='09.html'">
                 <div class="navigation-header">
                     <h3>Sen's Fortress</h3>
                 </div>
