Update naming, add hyperlink

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='04.html'">
+            <div class="navigation-card" onclick="window.location.href='04_undead-parish.html'">
                 <div class="navigation-header">
                     <h3>Undead Parish</h3>
                 </div>
