Update naming, add hyperlink

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -226,7 +226,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='05.html'">
+            <div class="navigation-card" onclick="window.location.href='05_lower-undead-burg.html'">
                 <div class="navigation-header">
                     <h3>Lower Undead Burg*</h3>
                 </div>
