Update naming, add hyperlink

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -237,7 +237,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='06.html'">
+            <div class="navigation-card" onclick="window.location.href='06_depths.html'">
                 <div class="navigation-header">
                     <h3>Depths*</h3>
                 </div>
