Update naming, add hyperlink

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -248,7 +248,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='07.html'">
+            <div class="navigation-card" onclick="window.location.href='07_blighttown.html'">
                 <div class="navigation-header">
                     <h3>Blighttown</h3>
                 </div>
