Update naming, add hyperlink

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='08.html'">
+            <div class="navigation-card" onclick="window.location.href='08_quelaags-domain.html'">
                 <div class="navigation-header">
                     <h3>Quelaag's Domain</h3>
                 </div>
