Update naming, add hyperlink

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -270,7 +270,7 @@
                     </div>
                 </div>
             </div>
-            <div class="navigation-card" onclick="window.location.href='09.html'">
+            <div class="navigation-card" onclick="window.location.href='09_sens-fortress.html'">
                 <div class="navigation-header">
                     <h3>Sen's Fortress</h3>
                 </div>
