Add specifiers for footnotes

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -282,6 +282,8 @@
                 </div>
             </div>
         </div>
+        <p>*Optional Area</p>
+        <p>**Contains Hidden Area</p>
     </div>
 
     <footer>
