Update areas with footnotes where needed

--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -195,7 +195,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='02_firelink-shrine.html'">
                 <div class="navigation-header">
-                    <h3>Firelink Shrine</h3>
+                    <h3>Firelink Shrine**</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -250,7 +250,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='07_blighttown.html'">
                 <div class="navigation-header">
-                    <h3>Blighttown</h3>
+                    <h3>Blighttown**</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
@@ -261,7 +261,7 @@
             </div>
             <div class="navigation-card" onclick="window.location.href='08_quelaags-domain.html'">
                 <div class="navigation-header">
-                    <h3>Quelaag's Domain</h3>
+                    <h3>Quelaag's Domain**</h3>
                 </div>
                 <div class="navigation-content">
                     <div>
