--- a/ds1/area-guides/landing-page.html
+++ b/ds1/area-guides/landing-page.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Northern Undead Asylum</p>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Firelink Shrine</p>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Undead Burg</p>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Undead Parish</p>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Lower Undead Burg</p>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Depths</p>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Blighttown</p>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Quelaag's Domain</p>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
                 </div>
                 <div class="navigation-content">
                     <div>
-                        <div class="nav-icon">🗺️</div>
+                        <!-- <div class="nav-icon">🗺️</div> -->
                         <p>Guide for Sen's Fortress</p>
                     </div>
                 </div>
