--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -315,7 +315,7 @@
                 </div>
 
             </div>
-            <div class="navigation-card" onclick="window.location.href='09.html'">
+            <div class="navigation-card" onclick="window.location.href='lord_souls/landing-page.html'">
                 <div class="navigation-header">
                     <h3>Lordvessel Bosses</h3>
                 </div>
