--- a/ds1/boss-guides/landing-page.html
+++ b/ds1/boss-guides/landing-page.html
@@ -313,7 +313,6 @@
                         <p>Strategies for defeating Ornstein & Smough</p>
                     </div>
                 </div>
-
             </div>
             <div class="navigation-card" onclick="window.location.href='lord_souls/landing-page.html'">
                 <div class="navigation-header">
@@ -328,7 +327,48 @@
                         <p>Strategies for defeating Lordvessel Bosses</p>
                     </div>
                 </div>
-
+            </div>
+            <div class="navigation-card" onclick="window.location.href='tmp.html'">
+                <div class="navigation-header">
+                    <h3>Ceaseless Discharge</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Ceaseless Discharge</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='tmp.html'">
+                <div class="navigation-header">
+                    <h3>Demon Fire Sage</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Demon Fire Sage</p>
+                    </div>
+                </div>
+            </div>
+            <div class="navigation-card" onclick="window.location.href='tmp.html'">
+                <div class="navigation-header">
+                    <h3>Centipede Demon</h3>
+                </div>
+                <div class="navigation-content">
+                    <div>
+                        <!-- <div class="nav-icon">⚔️</div> -->
+                        <!-- <div class="nav-icon">
+                            <img src="images/[tmp].png" alt="Boss Icon" class="icon-img">
+                        </div> -->
+                        <p>Strategies for defeating Centipede Demon</p>
+                    </div>
+                </div>
             </div>
         </div>
         <a href="../landing-page.html" class="back-button">Back to All DS1 Guides</a>
